--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class="text-5xl text-center mt-6">Welcome to <span class="font-bold text-violet-600">My Bank</span></h1>
+    <header class="container mx-auto">
+        <h1 class="text-5xl text-center mt-6">Welcome to <span class="font-bold text-violet-600">My Bank</span></h1>
+    </header>
+    <main>
+        <section class="container mx-auto bg-blue-200 w-9/12 mt-12 p-8">
+            <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
+            <div>
+                <input class="w-9/12 block mb-2 px-9" type="email" name="" id="" placeholder="Your email address">
+                <input class="w-9/12 block mb-2 px-9" type="password" name="" id="" placeholder="Password">
+                <button class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700" type="submit">Submit</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
