--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <section class="container mx-auto bg-blue-200 w-9/12 mt-12 p-8">
             <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
             <div>
-                <input class="w-9/12 block mb-2 px-9" type="email" name="" id="" placeholder="Your email address">
-                <input class="w-9/12 block mb-2 px-9" type="password" name="" id="" placeholder="Password">
-                <button class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700" type="submit">Submit</button>
+                <input id="user-email" class="w-9/12 block mb-2 px-9" type="email" name=""  placeholder="Your email address">
+                <input id="user-password" class="w-9/12 block mb-2 px-9" type="password" name=""  placeholder="Password">
+                <button id="btn-submit" class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700" type="submit">Submit</button>
             </div>
         </section>
     </main>
+    <script src="login.js"></script>
 </body>
 </html>
