--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="container mx-auto">
+    <header class="mx-auto">
         <h1 class="text-5xl text-center mt-6">Welcome to <span class="font-bold text-violet-600">My Bank</span></h1>
     </header>
     <main>
-        <section class="container mx-auto bg-blue-200 w-9/12 mt-12 p-8">
+        <section class="mx-auto bg-blue-200 w-9/12 mt-12 p-8">
             <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
             <div>
                 <input id="user-email" class="w-9/12 block mb-2 px-9" type="email" name=""  placeholder="Your email address">
