--- a/bank.html
+++ b/bank.html
@@ -1,38 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="container mx-auto">
-        <h1 class="text-5xl text-center mt-6">Inside your <span class="font-bold text-violet-600">Account</span></h1>
+      <h1 class="text-5xl text-center mt-6">
+        Inside your <span class="font-bold text-violet-600">Account</span>
+      </h1>
     </header>
     <main>
-        <section class="mx-auto mt-12">
-            <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto text-white ">
-                <div class='bg-green-500 p-8 rounded-xl'>
-                    <h4 class="text-2xl">Deposit</h4>
-                    <h2 class="text-5xl">$ 00</h2>
-                </div>
-                <div class='bg-orange-400 p-8 rounded-xl'>
-                    <h4 class="text-2xl">Withdraw</h4>
-                    <h2 class="text-5xl">$ 00</h2>
-                </div>
-                <div class='bg-pink-400 p-8 rounded-xl'>
-                    <h4 class="text-2xl">Balance</h4>
-                    <h2 class="text-5xl">$ 00</h2>
-                </div>
-                
-            </div>
-        </section>
+      <section class="mx-auto mt-12">
+        <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto text-white">
+          <div class="bg-green-500 p-8 rounded-xl">
+            <h4 class="text-2xl">Deposit</h4>
+            <h2 class="text-5xl">$ 00</h2>
+          </div>
+          <div class="bg-orange-400 p-8 rounded-xl">
+            <h4 class="text-2xl">Withdraw</h4>
+            <h2 class="text-5xl">$ 00</h2>
+          </div>
+          <div class="bg-pink-400 p-8 rounded-xl">
+            <h4 class="text-2xl">Balance</h4>
+            <h2 class="text-5xl">$ 00</h2>
+          </div>
+        </div>
+      </section>
+      <!-- deposit and withdraw -->
+      <section class="mx-auto mt-12">
+        <div class="grid grid-cols-2 gap-4 w-9/12 mx-auto text-white">
+          <div class="bg-fuchsia-400 p-8 rounded-xl flex flex-col items-center">
+            <h4 class="text-2xl mb-4">Please Deposit</h4>
+            <input
+              id="user-deposit"
+              class="w-9/12 block mb-3 px-9 text-black"
+              type="number"
+              name=""
+              placeholder="Deposit Amount"
+            />
+            <button
+              id="btn-deposit"
+              class="bg-zinc-500 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700"
+              type="submit"
+            >
+              Deposit
+            </button>
+          </div>
+          <div class="bg-indigo-400 p-8 rounded-xl flex flex-col items-center">
+            <h4 class="text-2xl mb-4">Please Withdraw</h4>
+            <input
+              id="user-withdraw"
+              class="w-9/12 block mb-3 px-9 text-black"
+              type="number"
+              name=""
+              placeholder="Withdraw Amount"
+            />
+            <button
+              id="btn-withdraw"
+              class="bg-zinc-500 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700"
+              type="submit"
+            >
+              Withdraw
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="login.js"></script>
-</body>
-
+  </body>
 </html>
