--- a/bank.html
+++ b/bank.html
@@ -19,15 +19,15 @@
         <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto text-white">
           <div class="bg-green-500 p-8 rounded-xl">
             <h4 class="text-2xl">Deposit</h4>
-            <h2 class="text-5xl">$ 00</h2>
+            <h2 class="text-5xl">$ <span id="deposit-total">00</span></h2>
           </div>
           <div class="bg-orange-400 p-8 rounded-xl">
             <h4 class="text-2xl">Withdraw</h4>
-            <h2 class="text-5xl">$ 00</h2>
+            <h2 class="text-5xl">$ <span id="withdraw-total">00</span></h2>
           </div>
           <div class="bg-pink-400 p-8 rounded-xl">
             <h4 class="text-2xl">Balance</h4>
-            <h2 class="text-5xl">$ 00</h2>
+            <h2 class="text-5xl">$ <span id="balance-total">00</span></h2>
           </div>
         </div>
       </section>
@@ -71,6 +71,6 @@
         </div>
       </section>
     </main>
-    <script src="login.js"></script>
+    <script src="deposit.js"></script>
   </body>
 </html>
