--- a/bank.html
+++ b/bank.html
@@ -72,5 +72,6 @@
       </section>
     </main>
     <script src="deposit.js"></script>
+    <script src="withdraw.js"></script>
   </body>
 </html>
