--- a/bank.html
+++ b/bank.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <section class="mx-auto mt-12">
-        <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto text-white">
+        <div class="grid md:grid-cols-3 gap-4 w-9/12 mx-auto text-white">
           <div class="bg-green-500 p-8 rounded-xl">
             <h4 class="text-2xl">Deposit</h4>
             <h2 class="text-5xl">$ <span id="deposit-total">00</span></h2>
@@ -33,7 +33,7 @@
       </section>
       <!-- deposit and withdraw -->
       <section class="mx-auto mt-12">
-        <div class="grid grid-cols-2 gap-4 w-9/12 mx-auto text-white">
+        <div class="grid md:grid-cols-2 gap-4 w-9/12 mx-auto text-white">
           <div class="bg-fuchsia-400 p-8 rounded-xl flex flex-col items-center">
             <h4 class="text-2xl mb-4">Please Deposit</h4>
             <input
