--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1 class="text-5xl text-center mt-6">Welcome to <span class="font-bold text-violet-600">My Bank</span></h1>
     </header>
     <main>
-        <section class="mx-auto bg-blue-200 w-9/12 mt-12 p-8">
+        <section class="mx-auto bg-blue-200 md:w-9/12 mt-12 p-8">
             <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
             <div>
-                <input id="user-email" class="w-9/12 block mb-2 px-9" type="email" name=""  placeholder="Your email address">
-                <input id="user-password" class="w-9/12 block mb-2 px-9" type="password" name=""  placeholder="Password">
+                <input id="user-email" class="md:w-9/12 block mb-2 px-9" type="email" name=""  placeholder="Your email address">
+                <input id="user-password" class="md:w-9/12 block mb-2 px-9" type="password" name=""  placeholder="Password">
                 <button id="btn-submit" class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700" type="submit">Submit</button>
             </div>
         </section>
