converted to functional

--- a/bank.html
+++ b/bank.html
@@ -71,6 +71,7 @@
         </div>
       </section>
     </main>
+    <script src="utilities.js"></script>
     <script src="deposit.js"></script>
     <script src="withdraw.js"></script>
   </body>
